--- a/package.json
+++ b/package.json
@@ -4,15 +4,17 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "nodemon --exec \"mocha --recursive -R min\""
+    "dev": "nodemon index.js",
+    "test": "SET NODE_ENV=test & nodemon --exec \"mocha --recursive -R min\""
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "mocha": "^8.0.1",
     "mongoose": "^5.9.20",
     "supertest": "^4.0.2"
   }
-}
+} 
